# haskell-dummy-project1

./: ChangeLog.md  haskell-dummy-package1.cabal  stack.yaml
src/: DummyPkg.hs
